Align header, footer & sidebar to correct positions per Holy Grail layout

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,28 +1,74 @@
 body {
+  display: flex;
+  flex-direction: column;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  font-size: 32px;
+  font-weight: 900;
   height: 72px;
   background: darkmagenta;
   color: white;
+  padding-left: 16px;
 }
 
 .footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
 .sidebar {
+  /* margin-top: -16px; */
+  /* flex-direction: column; */
+  align-items: center;
   width: 300px;
+  height: 100%;
   background: royalblue;
+  flex: 1 0 auto;
+}
+
+a {
+  font-size: 24px;
+  color: #ffffff;
+  padding: 16px;
+  text-decoration: none;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  gap: 16px;
+  list-style-type: none;
+}
+
+.deck {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-items: flex-end;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  height: 200px;
+  padding: 32px;
 }
+
+/* Define space that the cards take up so the flex properties work as intended. Cards take up all available space above footer */
+/* Cards arranged horizontally in addition to wrapping when they run out of room on the page. */
